# fast_bench

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  build.rs  dl_data.sh
benches/: benchmark.rs
cpp/: bioparser.cpp  bioparser.hpp  kseq  kseq.cpp  kseqpp.cpp  makefile  seqan.cpp
golang/: go_bio.go  makefile
src/: buf_ref_reader_stream.rs  fasten_like.rs  kseq.cpp  lib.rs  main.rs  memmap_reader.rs  tokio_nuc_counter.rs
