[package]
name = "fast_bench"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio       = "*"
criterion = "*"

[[bench]]
name = "benchmark"
harness = false