[package]
name = "fast_bench"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio            = { git = "https://github.com/natir/rust-bio.git" }
memmap         = "*"
seq_io         = "0.3"
criterion      = "*"
needletail     = "0.3.2"
buf-ref-reader = "*"
tempfile       = "3"
tokio          = { version = "0.2", features = ["full"] }
futures	       = "0.3"

[profile.release]
debug = true
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false

[[bench]]
name = "benchmark"
harness = false